--- a/style.css
+++ b/style.css
@@ -124,3 +124,29 @@ body {
         justify-content: center;
     }
     
+    /* filtres */
+
+.filtersFlex {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 30px;
+}
+
+.filtersBubble {
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    height: 40px;
+
+    padding: 4px 20px 4px 20px;
+    margin: 0px 30px 0px 30px;
+    border: #D9D9D9 solid 2px;
+    border-radius: 25px;
+
+    font-size: 17px;
+    font-weight: 700;
+}
+
+.filtersBubble:hover {
+    background-color:#D9D9D9;
+}
