--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ body {
     margin-bottom: 60px;
 }
 
+
 .blocMarseille {
     display: flex;
     justify-content: center;
@@ -189,3 +190,35 @@ body {
     justify-content: space-between;
     width: 420px;
 }
+
+/* cards Marseille */
+
+
+.cardMarseille {
+    display: flex;
+    flex-direction:column;
+    width: 246px;
+    height: 199px;
+    background-color: #fff;
+    color: #000;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border: #fff solid 5px;
+    border-radius: 20px;
+    margin: 15px;
+  }
+  
+  .cardMarseille img {
+    object-fit: cover; /* l'image remplit le div sans redimensionner */
+    height: 124px;
+    overflow:hidden; /* empêche de déborder du div */
+    border-radius: 20px 20px 0px 0px;
+  }
+  
+  .containerMarseille {
+
+    padding: 2px 16px;
+    width: 246px;
+    margin-top: 7px;
+    line-height: 20px;
+  }
+
