--- a/style.css
+++ b/style.css
@@ -222,3 +222,36 @@ body {
     line-height: 20px;
   }
 
+
+  /* Cards Populaire */
+
+
+  
+  /* Cards activités */
+
+  .cardAct {
+    display: flex;
+    flex-direction:column;
+    width: 302px;
+    height: 444px;
+    color: #000;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 20px;
+  }
+  
+  .cardAct img {
+    object-fit: cover; /* l'image remplit le div sans redimensionner */
+    height: 388px;
+    overflow:hidden; /* empêche de déborder du div */
+    border-radius: 20px 20px 0px 0px;
+  }
+  
+  .containerAct {
+
+    padding: 2px 16px;
+    width: 302px;
+    height: 56px;
+    font-weight: 800;
+  }
+
+
