--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
         color: #000;
         text-decoration:none;
     }
+
+    b {
+        font-weight: 700;
+    }
+
     
     a:hover {
     color: #0065fc;
@@ -28,6 +33,7 @@ body {
     h2 {
         font-weight: 700;
         font-size: 22px;
+        margin: 0px;
     }
     
     p {
@@ -84,10 +90,10 @@ body {
     .searchPosition {
         width: 50px;
         height: 49px;
-        background-color: #D9D9D9;
+        background-color: #F2F2F2;
         color: #ffffff;
         text-align: center;
-        border: 1px solid #D9D9D9;
+        border: 1px solid #F2F2F2;
         border-radius: 15px 0px 0px 15px;
         cursor: pointer;
     
@@ -131,6 +137,8 @@ body {
     display: flex;
     justify-content: flex-start;
     margin-top: 30px;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .filtersBubble {
@@ -149,7 +157,7 @@ body {
 }
 
 .filtersBubble:hover {
-    background-color:#D9D9D9;
+    background-color: #DEEBFF;
 }
 
 /* grids */
@@ -164,17 +172,17 @@ body {
 
 .blocMarseille {
     display: flex;
-    justify-content: justify;
     flex-wrap: wrap;
     width: 880px;
     background-color: #F2F2F2;
     border-radius: 20px;
     align-content: flex-start;
+    padding-top: 42px;
 }
 
 .titleMarseille {
     margin-left: 40px;
-    margin-top: 20px;
+    margin-bottom: 23px;
 }
 
 .cardsrow {
@@ -190,10 +198,11 @@ body {
     flex-wrap: nowrap;
     align-items: center;
     height: 625px;
-    width: 420px;
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding-top: 39px;
+    padding-top: 42px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 
@@ -240,6 +249,11 @@ body {
 
   /* Cards Populaire */
 
+  .cardsBox {
+    display: flex;
+    flex-direction: column;
+  }
+  
   .cardPop {
     display: flex;
     flex-direction: row;
@@ -264,29 +278,47 @@ body {
   }
   
   .containerPop {
+    display: flex;
     flex-wrap: wrap;
     padding: 2px 16px;
     width: 200px;
     margin-top: 7px;
     line-height: 20px;
     font-size: 16px;
+    align-content: space-between;
   }
   
+    .titlePop {
+        font-weight: 700;
+        font-style: bold;
+    }
+
+  .stars {
+
+  }
+
+  .pPop {
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+  }
+
+
   /* bande titre Populaire */
 
   .wrapPopTitle {
     display: flex;
+    width: 100%;
     flex-direction: row;
     justify-content: space-between;
-    align-content: flex-start;
   }
 
   .leftBoxPop {
-
   }
 
   .rightBoxPop {
-
+    display: flex;
+    align-items: center;
   }
 
 
@@ -311,12 +343,14 @@ body {
   }
   
   .containerAct {
+    display:flex;
     width: 302px;
-    height: 36px;
+    height: 56px;
     font-weight: 800;
-    padding: 19px 0px 0px 20px;
+    padding-left: 19px;
     font-size: 16px;
     font-weight: 800;
+    align-items: center;
   }
 
 /* footer */
@@ -344,13 +378,139 @@ body {
 
 @media screen and (max-width: 1388px) {
 
+    body {
+        margin: 0px 72px 0px 72px;
+    
+    }
+  
+
+    .blocPopulaire {
+        margin-top: 50px;
+        height: 100%;
+        padding-bottom: 50px;
+    }
+
+    .cardsBox {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+      }
+
+      .filtersBubble {
+        margin-right: 0px;
+        margin-left: 20px;
+      }
+
     .bande {
 flex-direction: column;
     }
 
+    .cardPop {
+        width: 252px;
+
+    }
+
+    .cardAct {
+        width: 182px;
+        height: 276px;
+      }
+      
+      .cardAct img {
+        width: 182px;
+        height: 211px;
+
+      }
+      
+      .containerAct {
+        display: flex;
+        width: 182px;
+        height: 56px;
+        align-items: center;
+      }
+
 }
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 767px) { 
 
-
+  body {
+    margin: 0px;
+  }
+  
+  .headWrapper {
+    flex-wrap:nowrap;
+    flex-direction: column;
+  }
+  
+.imgBox{
+  justify-content: center;
+  flex-direction: auto;
 }
+
+  .linkBox {
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+  }
+  
+  .filtersFlex {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .bande {
+      flex-direction: row;
+      flex-direction: row-reverse;
+      justify-content: baseline;
+  }
+  
+  .blocMarseille {
+  
+    width: 100%;
+    border-radius: 0px;
+    margin: 0px;
+  }
+  
+  .cardsrow {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  
+  .blocPopulaire {
+  width: 100%;
+  }
+  
+  .cardPop {
+    width: 334px;
+  
+  }
+  
+  .cardAct {
+    width: 334px;
+    height: 190px;
+  }
+  
+  .cardAct img {
+    width: 334px;
+    height: 134px;
+  
+  }
+  
+  .containerAct {
+    display: flex;
+    width: 334px;
+    height: 56px;
+    align-items: center;
+  }
+  
+  }
