--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 
 /* body */
 
+/* TODO (DESKTOP) redimensionner images 
+TODO (DESKTOP) graisser les bold et les h1 
+
+TODO (TABLETTE) margins footer 
+
+TODO (GSM) pop + act + footer à flex volumn
+
+
+*/
+
 body {
-        margin: 0px 55px 0px 55px;
+        margin: auto;
         background-color: #fff;
         font-family: Raleway;
         max-width: 1400px;
@@ -34,6 +44,7 @@ body {
         font-weight: 700;
         font-size: 22px;
         margin: 0px;
+        justify-content: left;
     }
     
     p {
@@ -135,6 +146,7 @@ body {
 
 .filtersFlex {
     display: flex;
+    width: 100%;
     justify-content: flex-start;
     margin-top: 30px;
     align-items: center;
@@ -158,6 +170,23 @@ body {
 
 .filtersBubble:hover {
     background-color: #DEEBFF;
+}
+
+.infoText {
+  display: flex;
+flex-direction: row;
+margin-left: 20px;
+}
+
+.infoImg {
+  display: flex;
+  border: 1px #D9D9D9 solid; 
+  border-radius: 25px; 
+  padding: 7px; 
+  height: 14px; 
+  width: 14px;
+  justify-content: center;
+  
 }
 
 /* grids */
@@ -371,67 +400,90 @@ body {
     align-items: flex-start;
     margin-right: 250px;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 36px;
 }
+
+
+
+
 
 
 
 @media screen and (max-width: 1388px) {
 
-    body {
-        margin: 0px 72px 0px 72px;
-    
-    }
+  body {
+      margin: 0px 72px 0px 72px;
   
+  }
 
-    .blocPopulaire {
-        margin-top: 50px;
-        height: 100%;
-        padding-bottom: 50px;
+
+  .blocPopulaire {
+    width: auto;
+      margin-top: 50px;
+      height: 100%;
+      padding-bottom: 50px;
+      padding-left: 0px;
+      padding-right: 0px;
+
+  }
+
+  .cardsBox {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-around;
     }
 
-    .cardsBox {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        justify-content: space-between;
-      }
+    .filtersBubble {
+      margin-right: 0px;
+      margin-left: 20px;
+    }
 
-      .filtersBubble {
-        margin-right: 0px;
-        margin-left: 20px;
-      }
-
-    .bande {
+  .bande {
 flex-direction: column;
+  }
+
+  .cardPop {
+      width: 252px;
+
+  }
+
+  .cardAct {
+      width: 182px;
+      height: 276px;
+    }
+    
+    .cardAct img {
+      width: 182px;
+      height: 211px;
+
     }
 
-    .cardPop {
-        width: 252px;
-
+    .leftBoxPop{
+      margin-left: 40px;
+    }
+    
+    .containerAct {
+      display: flex;
+      width: 182px;
+      height: 56px;
+      align-items: center;
     }
 
-    .cardAct {
-        width: 182px;
-        height: 276px;
-      }
-      
-      .cardAct img {
-        width: 182px;
-        height: 211px;
 
-      }
-      
-      .containerAct {
-        display: flex;
-        width: 182px;
-        height: 56px;
-        align-items: center;
-      }
+    .gridFooter {
+      height: auto;
+        flex-direction: row;
+    }
+    
+    .blocFooter {
+        width: 100%;
+        margin-bottom: 40px;
+        margin-right: 0px;
+    }
+
 
 }
-
-
 
 
 
@@ -444,12 +496,21 @@ flex-direction: column;
 @media screen and (max-width: 767px) { 
 
   body {
-    margin: 0px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 767px;
+    justify-content: center;
   }
   
+p{
+  margin-left: 20px;
+}
+
   .headWrapper {
     flex-wrap:nowrap;
     flex-direction: column;
+    align-items: center;
   }
   
 .imgBox{
@@ -461,26 +522,92 @@ flex-direction: column;
     justify-content: center;
     flex-direction: row;
     width: 100%;
+    border-bottom: 3px #F2F2F2 solid;
+    margin: 0px;
   }
+
+
+.linkBox a{
+    margin-right: 40px;
+    padding: 48px 20px 0px 20px ;
+    font-size:18px;
+    border-bottom: 3px #0065FC solid;
+}
   
+
+  .searchPosition {
+    width: 50px;
+
+
+}
+
+.searchBar {
+    width: 282px;
+}
+
+.searchButton {
+    width: 49px;
+}
+
+.searchButton::placeholder {
+  width: 49px;
+}
+
+.filter {
+margin-bottom: 20px;
+display: flex;
+width: 100%;
+}
+
+
   .filtersFlex {
     flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: row;
+    margin-left: 20px;
+    justify-content: space-between;
+    
   }
-  
+
+  .filtersBubble {
+    width: 160px;
+    height: 50px;
+    padding: 0px;
+    padding-left: 15px;
+        margin: 0px;
+    margin-bottom: 17px;
+
+    border-radius: 25px;
+    align-items: center; 
+    justify-content: left;
+    font-size: 11px;
+}
+
   .bande {
-      flex-direction: row;
-      flex-direction: row-reverse;
-      justify-content: baseline;
+
+    flex-direction: column-reverse;
   }
   
   .blocMarseille {
   
     width: 100%;
     border-radius: 0px;
-    margin: 0px;
+    padding-top: 26px;
+    background-color: #fff;
   }
   
+  .cardMarseille {
+    width: 335px;
+    height: 200px;
+  }
+  
+  .cardMarseille img {
+    height: 124px;
+  }
+  
+  .containerMarseille {
+    height: 75px;
+  }
+
   .cardsrow {
     flex-direction: column;
     flex-wrap: nowrap;
@@ -488,6 +615,11 @@ flex-direction: column;
   
   .blocPopulaire {
   width: 100%;
+  flex-direction: column;
+  padding: 0px;
+  margin: 0px;
+  border-radius: 0px;
+  padding-bottom: 47px;
   }
   
   .cardPop {
@@ -512,5 +644,43 @@ flex-direction: column;
     height: 56px;
     align-items: center;
   }
-  
+
+  .cardsBox {
+    flex-direction: column;
+  }
+
+  .blocAct {
+    flex-direction: column;
+    width: auto;
+    align-items: center;
+  }
+
+  .cardAct {
+    width: 334px;
+    height: 190px;
+    margin-bottom: 24px;
+  }
+
+  .cardAct img {
+  height: 134px;
+  }
+
+  .containerAct {
+    height: 56px;
+  }
+
+  .gridFooter {
+  width: 100%;
+  height: auto;
+    flex-direction: column;
+    padding-left: 30px;
+}
+
+.blocFooter {
+    width: 100%;
+    margin-bottom: 40px;
+    margin-right: 0px;
+}
+
+
   }
