--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@ TODO (GSM) barre de recherche
 */
 
 body {
+        min-width: 320px;
         margin: auto;
         background-color: #fff;
         font-family: Raleway;
@@ -47,7 +48,7 @@ body {
     }
     
     p {
-        margin-top: 0px;
+        margin: 0px;
         font-size: 16px;
         line-height: 19px;
     }
@@ -178,18 +179,25 @@ body {
 .infoText {
   display: flex;
 flex-direction: row;
-margin-left: 20px;
+align-items: center;
+
 }
 
 .infoImg {
   display: flex;
   border: 1px #D9D9D9 solid; 
-  border-radius: 25px; 
-  padding: 7px; 
-  height: 14px; 
-  width: 14px;
+  border-radius: 50%; 
+  padding: 6px; 
+  height: 10px; 
+  width: 10px;
   justify-content: center;
+  align-items: center;
+  margin-right: 10px;
   
+}
+
+.infoImg i {
+  font-size: 10px;
 }
 
 /* grids */
@@ -412,10 +420,10 @@ margin-left: 20px;
 
       /* M E D I A Q U E R Y    T A B L E T T E */
 
-@media screen and (max-width: 1388px) {
+@media screen and (max-width: 992px) {
 
   body {
-      margin: 0px 72px 0px 72px;
+     /* margin: 0px 72px 0px 72px; */
   
   }
 
@@ -495,15 +503,8 @@ flex-direction: column;
 
           /* M E D I A Q U E R Y    G S M */
 
-@media screen and (max-width: 767px) { 
+@media screen and (max-width: 768px) { 
 
-  body {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
-    max-width: 767px;
-    justify-content: center;
-  }
   
 p{
   margin-left: 20px;
