--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,12 @@ h2 {
   justify-content: left;
 }
 
+h3 {
+  font-weight: 700;
+  font-size: 16px;
+  margin: 0;
+}
+
 p {
   margin: 0px;
   font-size: 16px;
@@ -567,6 +573,13 @@ font-size: 22px;
 h2 {
   margin-left:20px;
 }
+
+h3 {
+  font-weight: 700;
+  font-size: 14px;
+}
+
+
 
 .headWrapper {
 flex-wrap:nowrap;
